<resources>
    <string name="app_name">crackingMBA</string>
    <string-array name="tab_items">
        <item>Forum</item>
        <item>Videos</item>
        <item>Mock Tests</item>
        <item>Whats Up!</item>

    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="tab_icons">
        <item>@drawable/exams1</item>
        <item>@drawable/videos_img</item>
        <item>@drawable/mock_test_icon_1</item>
        <item>@drawable/whatsup_img</item>videos_img.png

    </array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_dashboard">crackingMBA</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="title_activity_fullscreen">crackingMBA</string>
    <string name="dummy_button"></string>
    <string name="dummy_content"></string>
    <string name="title_activity_video_sub_category">List of Topics</string>
    <string name="title_activity_weeks">List of Videos</string>
    <string name="title_activity_target_video">Video Details</string>
    <string name="ask_a_qstn">Ask a Question</string>
    <string name="enter_ur_qstn">Enter Your Question</string>
    <string name="submit_qstn">Submit Question</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="registartion_txt">Registration</string>
    <string name="email_txt">Email</string>
    <string name="pwd_txt">Password</string>
    <string name="new_pwd_txt">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="register_txt">Register</string>
    <string name="answer_heading">Here is the Reply For Your Question</string>
    <string name="invisible_button">Invisible Button</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="not_logged_in_msg">Oops! Looks like you are not yet logged in</string>
    <string name="google_login">Google Login</string>
    <string name="fb_login">Facebook Login</string>
    <string name="app_login">Existing User Login</string>
    <string name="new_user_register">New User Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout_txt">Logout</string>
    <string name="my_messages">My Messages</string>
    <string name="starttest_button">Start Test</string>
    <string name="submit_answer_button">Submit Answer</string>
    <string name="skip_qstn__button">Reset and Skip Question</string>
    <string name="review_answers">Review Answers</string>
    <string name="reset_selection">Reset Selection</string>
    <string name="view_scorecard">View ScoreCard</string>
    <string name="exit_mock_test">Exit Test</string>
    <string name="square_root_symbol">\u221a</string>

    <!-- Login Screen -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>
    <string name="facebook_app_id">116852088853065</string>
    <string name="qstns_not_available">You have not posted any questions yet</string>

    <!-- The listing of videos -->
    <string name="videos_coming_soon">Videos in this section will be uploaded as per the scheduled dates</string>

    <!-- Youtube Resources -->
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!-- OTP Validation -->
    <string name="enter_otp_txt">Enter the received OTP</string>
    <string name="btn_validate_otp">Validate OTP</string>
    <string name="enter_email_txt">Enter your registered email Id</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="btn_change_pwd">Change Password</string>
    <string name="forgot_pwd_txt">Forgot Password ?</string>
    <string name="no_video_avilable">Currently No video available in this category</string>
    <string name="no_internet">No internet Connectivity. Verify your Network. Please connect to internet to view this section.</string>

    <string-array name="exams_array">
        <item>Select Exam</item>
        <item>CAT</item>
        <item>XAT</item>
        <item>SNAP</item>
        <item>IIFT</item>
        <item>NMAT</item>
        <item>Others</item>
    </string-array>

    <string-array name="prep_array">
        <item>Select Section</item>
        <item>Quant</item>
        <item>DI, LR</item>
        <item>Verbal</item>
        <item>GK</item>
    </string-array>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
