
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/emptymydashlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:text="@string/invisible_button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/invisible_button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/emptymydashlayout">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <ImageView
                android:id="@+id/userprofile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/txtEmail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18dp" />

            <Button
                android:id="@+id/editprofilebtn"
                android:text="@string/edit_profile"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/logoutbtn"
                android:text="@string/logout_txt"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/my_messages"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="left"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/mydashboard_recycler_qstns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:scrollbars="none" />

            <ImageButton
                android:id="@+id/plusbtn"
                android:layout_marginTop="8dp"
                android:src="@drawable/preparation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="right|bottom"
                android:layout_gravity="right"
                android:adjustViewBounds="true"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
